--- a/src/App.css
+++ b/src/App.css
@@ -32,7 +32,7 @@
 .medalCount {
   padding-left: 5px;
   color: goldenrod;
-  float: right;
+  
 }
 .medals {
   font-size: 15pt;
@@ -45,4 +45,10 @@
 
 .removeButton :hover{
   color: red;
+}
+.medalList { 
+  align-content: center;
+  margin-left: auto;
+  margin-right: auto;
+  background-color: #dadce0;
 }
