--- a/src/App.css
+++ b/src/App.css
@@ -12,6 +12,7 @@
   margin-right: auto;
   margin-left: auto;
   text-align: center;
+  
 }
 .cName {
     text-align: center;
@@ -50,5 +51,9 @@
   align-content: center;
   margin-left: auto;
   margin-right: auto;
+  
+}
+.countryCard {
   background-color: #dadce0;
 }
+
